Code reformatted